--- a/src/css/card.css
+++ b/src/css/card.css
@@ -2,11 +2,11 @@
     padding: 40px 0;
 }
 
-.card-filme {
+.card {
     width: 100%;
 }
 
-.card-filme img {
+.card img {
     width: 100%;
     border-radius: 8px 8px 0 0;
 }
