--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@100;300;400;700&family=Roboto:wght@100;300;500;700&display=swap');
+@import url('./card-form.css');
 
 * {
     box-sizing: border-box;
