--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,94 @@ nav li {
     color: unset;
   }
 
+
+  .contact-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .contact-container img {
+    margin-right: 10px;
+  }
+
+  #card-list {
+    padding: 20px 10px;
+  }
+
+  .card {
+    width: 100%;
+    
+  }
+
+  .card img {
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+  }
+
+  .card-description {
+    background-color: var(--white); 
+    padding: 10px 20px 20px  20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0 0 8px 8px;
+    height: 200px;
+  }
+
+  .card-description h3 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    align-items: center;
+    
+  }
+
+  .card-description-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .description-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-description-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-description h4 {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+  }
+
+  .card-description-bottom img {
+    width: 22px;
+  }
+
+  .card-description-bottom p {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-light-gray);
+    margin-bottom: 10px;
+  }
+
+  .btn, .btn:hover {
+    width: 180px;
+    height: 40px;
+    background-color: var(--color-primary);
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    border: 0;
+  }
