--- a/css/style.css
+++ b/css/style.css
@@ -103,14 +103,14 @@ nav li {
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
-    height: 180px;
+    height: 190px;
   }
 
   .card-description h3 {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 700;
     margin-bottom: 10px;
-    align-items: center;
+    text-align: center;
     
   }
 
